--- a/Plast/ass7/css/mobile.css
+++ b/Plast/ass7/css/mobile.css
@@ -22,7 +22,7 @@ background-image: url("../pictures/wall.jpg");
 background-position: center 0;
 background-repeat: no-repeat;
 margin: 0;
-overflow-x: auto;
+overflow-x: hidden;
 text-size-adjust: none;
 }
 
